// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactListPage > should match a snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-93 el-snack-holder"
  />
  <div
    class="el-flex-container el-flex-auto"
  >
    <section
      class="el-page-container el-has-grey-background"
    >
      <div
        class="mocked-styled-178 el-page-header-wrap"
      >
        <div
          class="el-page-header-max-width el-page-header-wrap-inner"
        >
          <div
            class="mocked-styled-175 el-page-header-container"
          >
            <div
              class="mocked-styled-175 el-page-header-container"
            >
              <div
                class="el-flex-container el-flex-column"
              >
                <div
                  class="mocked-styled-176 el-page-header-title-container"
                >
                  <h1
                    class="el-text-base el-text2xl el-has-bold-text el-mr3"
                  >
                    Contacts
                  </h1>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="mocked-styled-3 el-button-group-inner"
              >
                <button
                  class="el-mb5 el-button-size-small el-intent-primary el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  New Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-flex-container el-flex-column el-has-max-width"
      >
        <div
          class="mocked-styled-172 el-tile"
        >
          <form>
            <div
              class="el-mb8 el-form-layout"
            >
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search name"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Name
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="address"
                    placeholder="Search address"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Address
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search email"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Email
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Active Contacts
                  </label>
                  <div
                    class="el-has-grey-bg el-toggle-radio-wrap"
                  >
                    <input
                      checked=""
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-all"
                      name="active"
                      type="radio"
                      value=""
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-all"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        All
                      </span>
                    </label>
                    <input
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-true"
                      name="active"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-true"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        Active
                      </span>
                    </label>
                    <input
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-false"
                      name="active"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-false"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        Inactive
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="mocked-styled-44 el-loader-container"
          >
            <div
              class="mocked-styled-46 el-loader"
            >
              <div
                class="mocked-styled-47 el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ContactListPage > should match a snapshot when not loading but no contact 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-93 el-snack-holder"
  />
  <div
    class="el-flex-container el-flex-auto"
  >
    <section
      class="el-page-container el-has-grey-background"
    >
      <div
        class="mocked-styled-178 el-page-header-wrap"
      >
        <div
          class="el-page-header-max-width el-page-header-wrap-inner"
        >
          <div
            class="mocked-styled-175 el-page-header-container"
          >
            <div
              class="mocked-styled-175 el-page-header-container"
            >
              <div
                class="el-flex-container el-flex-column"
              >
                <div
                  class="mocked-styled-176 el-page-header-title-container"
                >
                  <h1
                    class="el-text-base el-text2xl el-has-bold-text el-mr3"
                  >
                    Contacts
                  </h1>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="mocked-styled-3 el-button-group-inner"
              >
                <button
                  class="el-mb5 el-button-size-small el-intent-primary el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  New Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-flex-container el-flex-column el-has-max-width"
      >
        <div
          class="mocked-styled-172 el-tile"
        >
          <form>
            <div
              class="el-mb8 el-form-layout"
            >
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search name"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Name
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="address"
                    placeholder="Search address"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Address
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search email"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Email
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Active Contacts
                  </label>
                  <div
                    class="el-has-grey-bg el-toggle-radio-wrap"
                  >
                    <input
                      checked=""
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-all"
                      name="active"
                      type="radio"
                      value=""
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-all"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        All
                      </span>
                    </label>
                    <input
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-true"
                      name="active"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-true"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        Active
                      </span>
                    </label>
                    <input
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-false"
                      name="active"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-false"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        Inactive
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ContactListPage > should match a snapshot with data 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-93 el-snack-holder"
  />
  <div
    class="el-flex-container el-flex-auto"
  >
    <section
      class="el-page-container el-has-grey-background"
    >
      <div
        class="mocked-styled-178 el-page-header-wrap"
      >
        <div
          class="el-page-header-max-width el-page-header-wrap-inner"
        >
          <div
            class="mocked-styled-175 el-page-header-container"
          >
            <div
              class="mocked-styled-175 el-page-header-container"
            >
              <div
                class="el-flex-container el-flex-column"
              >
                <div
                  class="mocked-styled-176 el-page-header-title-container"
                >
                  <h1
                    class="el-text-base el-text2xl el-has-bold-text el-mr3"
                  >
                    Contacts
                  </h1>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="mocked-styled-3 el-button-group-inner"
              >
                <button
                  class="el-mb5 el-button-size-small el-intent-primary el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  New Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-flex-container el-flex-column el-has-max-width"
      >
        <div
          class="mocked-styled-172 el-tile"
        >
          <form>
            <div
              class="el-mb8 el-form-layout"
            >
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search name"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Name
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="address"
                    placeholder="Search address"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Address
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type search"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search email"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1rem;"
                      title="Icon image with name search"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Contact Email
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <label
                    class="mocked-styled-41 el-label"
                  >
                    Active Contacts
                  </label>
                  <div
                    class="el-has-grey-bg el-toggle-radio-wrap"
                  >
                    <input
                      checked=""
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-all"
                      name="active"
                      type="radio"
                      value=""
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-all"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        All
                      </span>
                    </label>
                    <input
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-true"
                      name="active"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-true"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        Active
                      </span>
                    </label>
                    <input
                      class="mocked-styled-127 el-toggle-radio"
                      id="option-active-false"
                      name="active"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-false"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="mocked-styled-124 el-toggle-radio-item"
                      >
                        Inactive
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-mb8 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="5"
            role="table"
          >
            <div
              class="mocked-styled-101 el-table-headers-row"
              role="row"
            >
              <div
                aria-label="Contact Name"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Contact Name
              </div>
              <div
                aria-label="Contact Email"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Contact Email
              </div>
              <div
                aria-label="Contact Mobile Phone"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Contact Mobile Phone
              </div>
              <div
                aria-label="Contact Address"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Contact Address
              </div>
              <div
                aria-label="Contact Active"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Contact Active
              </div>
              <div
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name settings"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-110 el-table-row-container"
              role="row"
            >
              <div
                class="mocked-styled-103 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name contact"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5m0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Name"
                  >
                    Mr Foo Bar
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name email"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2m-1.41 2L12 12.59 5.41 6zM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Email"
                  >
                    foo@bar.com
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name phone"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 16.81a3.3 3.3 0 0 0-.3-.81l-6-1a3.5 3.5 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.2 3.2 0 0 0-.83-.24A3 3 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 4 4 0 0 0 0-.59"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Mobile Phone"
                  >
                    242423424
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name property"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Address"
                  >
                    Bar Foo Foo Bar Foo Bar Foo
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Active"
                  >
                    <span
                      class="el-intent-success el-status-indicator"
                    />
                     Active
                  </div>
                </div>
                <div
                  class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                  role="cell"
                  tabindex="0"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name more"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="mocked-styled-113 el-table-expandable-row"
              >
                <div
                  class="mocked-styled-114 el-table-expandable-container"
                >
                  <div
                    class="mocked-styled-2 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Quick View Contact
                      </button>
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Full Contact
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Edit Contact
                      </button>
                      <button
                        class="el-intent-danger el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Deactivate
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-110 el-table-row-container"
              role="row"
            >
              <div
                class="mocked-styled-103 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name contact"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5m0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Name"
                  >
                    Mr Foo Bar
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name email"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2m-1.41 2L12 12.59 5.41 6zM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Email"
                  >
                    foo@bar.com
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name phone"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 16.81a3.3 3.3 0 0 0-.3-.81l-6-1a3.5 3.5 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.2 3.2 0 0 0-.83-.24A3 3 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 4 4 0 0 0 0-.59"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Mobile Phone"
                  >
                    242423424
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25rem;"
                      title="Icon image with name property"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Address"
                  >
                    Bar Foo Foo Bar Foo Bar Foo
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Contact Active"
                  >
                    <span
                      class="el-intent-danger el-status-indicator"
                    />
                     Inactive
                  </div>
                </div>
                <div
                  class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                  role="cell"
                  tabindex="0"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name more"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="mocked-styled-113 el-table-expandable-row"
              >
                <div
                  class="mocked-styled-114 el-table-expandable-container"
                >
                  <div
                    class="mocked-styled-2 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Quick View Contact
                      </button>
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Full Contact
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Edit Contact
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Activate
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-mb8"
          >
            <div
              class="mocked-styled-71 el-pagination-wrap"
            >
              <button
                aria-label="Previous"
                class="mocked-styled-74 el-pagination-button"
                data-testid="back-button"
                role="button"
                type="button"
              >
                <span
                  class="el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name chevronLeft"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="mocked-styled-72 el-pagination-text"
              >
                <input
                  aria-label="Current page number, edit to select page of 1 available"
                  class="mocked-styled-73 el-pagination-input"
                  value="1"
                />
                 of 1
              </div>
              <button
                aria-label="Next"
                class="mocked-styled-74 el-pagination-button"
                data-testid="forward-button"
                role="button"
                type="button"
              >
                <span
                  class="el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name chevronRight"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
